Fixed tool bar horizontal scrolling

--- a/frontend/static/css/general.css
+++ b/frontend/static/css/general.css
@@ -250,7 +250,7 @@ main > *:not(.tool-bar-container) {
 /* Tool bar */
 /*  */
 .tool-bar-container {
-	height: var(--tool-bar-height);
+	min-height: var(--tool-bar-height);
 	flex: 0 0 auto;
 
 	display: flex;
